--- a/extras/FormacaoCientistaDados/7.Prática em Python/scripts/1.Variaveis e Objetos.ipynb
+++ b/extras/FormacaoCientistaDados/7.Prática em Python/scripts/1.Variaveis e Objetos.ipynb
@@ -10,9 +10,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-04-13T10:48:12.979397Z",
+     "end_time": "2023-04-13T10:48:12.985189Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3.13\n",
+      "Python\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "#Cria variável do tipo inteiro\n",
     "x = 1\n",
