--- a/extras/FormacaoCientistaDados/7.Prática em Python/scripts/2.Estruturas de Decisao.ipynb
+++ b/extras/FormacaoCientistaDados/7.Prática em Python/scripts/2.Estruturas de Decisao.ipynb
@@ -10,9 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aprovado\n",
+      "Parabéns!\n"
+     ]
+    }
+   ],
    "source": [
     "nota = 7\n",
     "if nota >= 7:\n",
@@ -24,9 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reprovado\n"
+     ]
+    }
+   ],
    "source": [
     "#só mudar o valor da variável\n",
     "nota = 5\n",
@@ -38,9 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aprovado\n"
+     ]
+    }
+   ],
    "source": [
     "#Testar com 4,5 e 7\n",
     "nota = 7\n",
@@ -76,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
