--- a/extras/FormacaoCientistaDados/7.Prática em Python/scripts/8.Facavcmesmo.ipynb
+++ b/extras/FormacaoCientistaDados/7.Prática em Python/scripts/8.Facavcmesmo.ipynb
@@ -10,9 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amplitude: 98\n"
+     ]
+    }
+   ],
    "source": [
     "#1. Faça um programa que tenha uma função chamada amplitude. A função deve receber uma lista e imprimir a amplitude.\n",
     "#Crie também um código para testar sua função\n",
@@ -39,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor da carga é de R$ 50,00\n"
+     ]
+    }
+   ],
    "source": [
     "#3. Crie um programa que leia o peso de uma carga em números inteiros. \n",
     "#Se o peso for até 10 kg, informe que o valor será de R$ 50,00. \n",
@@ -74,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
