adiciona novos estudos

--- a/projeto/Etapa2/estudo_genero.ipynb
+++ b/projeto/Etapa2/estudo_genero.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-13T23:47:27.371552Z",
@@ -21,27 +21,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          Name  Gender\n",
-      "0        James       1\n",
-      "1         John       1\n",
-      "2       Robert       1\n",
-      "3      Michael       1\n",
-      "4      William       1\n",
-      "...        ...     ...\n",
-      "28075   Georga       0\n",
-      "28076   Ileane       0\n",
-      "28077   Jameia       0\n",
-      "28078   Jazara       0\n",
-      "28079  Johnice       0\n",
+      "           Name  Gender\n",
+      "0         James     1.0\n",
+      "1          John     1.0\n",
+      "2        Robert     1.0\n",
+      "3       Michael     1.0\n",
+      "4       William     1.0\n",
+      "...         ...     ...\n",
+      "147243   Zylenn     1.0\n",
+      "147244   Zymeon     1.0\n",
+      "147245   Zyndel     1.0\n",
+      "147246   Zyshan     1.0\n",
+      "147247    Zyton     1.0\n",
       "\n",
-      "[28080 rows x 2 columns]\n"
+      "[147248 rows x 2 columns]\n"
      ]
     }
    ],
@@ -53,37 +53,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0          James\n",
-      "1           John\n",
-      "2         Robert\n",
-      "3        Michael\n",
-      "4        William\n",
-      "          ...   \n",
-      "28075     Georga\n",
-      "28076     Ileane\n",
-      "28077     Jameia\n",
-      "28078     Jazara\n",
-      "28079    Johnice\n",
-      "Name: Name, Length: 28080, dtype: object\n",
-      "0        1\n",
-      "1        1\n",
-      "2        1\n",
-      "3        1\n",
-      "4        1\n",
-      "        ..\n",
-      "28075    0\n",
-      "28076    0\n",
-      "28077    0\n",
-      "28078    0\n",
-      "28079    0\n",
-      "Name: Gender, Length: 28080, dtype: int64\n"
+      "0           James\n",
+      "1            John\n",
+      "2          Robert\n",
+      "3         Michael\n",
+      "4         William\n",
+      "           ...   \n",
+      "147243     Zylenn\n",
+      "147244     Zymeon\n",
+      "147245     Zyndel\n",
+      "147246     Zyshan\n",
+      "147247      Zyton\n",
+      "Name: Name, Length: 147248, dtype: object\n",
+      "0         1.0\n",
+      "1         1.0\n",
+      "2         1.0\n",
+      "3         1.0\n",
+      "4         1.0\n",
+      "         ... \n",
+      "147243    1.0\n",
+      "147244    1.0\n",
+      "147245    1.0\n",
+      "147246    1.0\n",
+      "147247    1.0\n",
+      "Name: Gender, Length: 147248, dtype: float64\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,9 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 117. GiB for an array with shape (117798, 133498) and data type int64",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Padronize os recursos usando o StandardScaler do Scikit-learn:\u001b[39;00m\n\u001b[1;32m      2\u001b[0m scaler \u001b[39m=\u001b[39m StandardScaler()\n\u001b[0;32m----> 3\u001b[0m x_train \u001b[39m=\u001b[39m scaler\u001b[39m.\u001b[39mfit_transform(x_train\u001b[39m.\u001b[39;49mtoarray())\n\u001b[1;32m      4\u001b[0m x_test \u001b[39m=\u001b[39m scaler\u001b[39m.\u001b[39mtransform(x_test\u001b[39m.\u001b[39mtoarray())\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/scipy/sparse/_compressed.py:1051\u001b[0m, in \u001b[0;36m_cs_matrix.toarray\u001b[0;34m(self, order, out)\u001b[0m\n\u001b[1;32m   1049\u001b[0m \u001b[39mif\u001b[39;00m out \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m order \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   1050\u001b[0m     order \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_swap(\u001b[39m'\u001b[39m\u001b[39mcf\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m0\u001b[39m]\n\u001b[0;32m-> 1051\u001b[0m out \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_process_toarray_args(order, out)\n\u001b[1;32m   1052\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (out\u001b[39m.\u001b[39mflags\u001b[39m.\u001b[39mc_contiguous \u001b[39mor\u001b[39;00m out\u001b[39m.\u001b[39mflags\u001b[39m.\u001b[39mf_contiguous):\n\u001b[1;32m   1053\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mOutput array must be C or F contiguous\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/scipy/sparse/_base.py:1298\u001b[0m, in \u001b[0;36mspmatrix._process_toarray_args\u001b[0;34m(self, order, out)\u001b[0m\n\u001b[1;32m   1296\u001b[0m     \u001b[39mreturn\u001b[39;00m out\n\u001b[1;32m   1297\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1298\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39;49mzeros(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mshape, dtype\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdtype, order\u001b[39m=\u001b[39;49morder)\n",
+      "\u001b[0;31mMemoryError\u001b[0m: Unable to allocate 117. GiB for an array with shape (117798, 133498) and data type int64"
+     ]
+    }
+   ],
    "source": [
     "# Padronize os recursos usando o StandardScaler do Scikit-learn:\n",
     "scaler = StandardScaler()\n",
