--- a/projeto/Etapa2/estudo_generos_2.ipynb
+++ b/projeto/Etapa2/estudo_generos_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,9 +69,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_test_split' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Divida os dados em conjuntos de treinamento e teste:\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m X_train, X_test, y_train, y_test \u001b[39m=\u001b[39m train_test_split(X, y, test_size\u001b[39m=\u001b[39m\u001b[39m0.2\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_test_split' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Divida os dados em conjuntos de treinamento e teste:\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
